TracTicketFieldsLayoutPlugin: prevent overflow of radio buttons (fixed #11729)
The issue has been fixed in Trac 1.0.2dev, see trac:r12513.

git-svn-id: http://trac-hacks.org/svn@13903 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracticketfieldslayoutplugin/0.12/tracticketfieldslayout/htdocs/web_ui.css
+++ b/tracticketfieldslayoutplugin/0.12/tracticketfieldslayout/htdocs/web_ui.css
@@ -1,4 +1,9 @@
 #properties table { table-layout: fixed }
+#properties table td.col1 > label,
+#properties table td.col2 > label {
+ float: left;
+ margin-right: 0.5em;
+}
 #ticket table.properties .ticketfieldslayout-toggle td,
 #properties .ticketfieldslayout-toggle td {
  width: 100%;
